# toxicjoin

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  run.ps1  run.sh  vercel.json
.github/workflows/: adversarial-mutations.yml  apply-agent-skill-docs.yml  apply-capture-auth-verifier.yml  apply-datahub-hash-canonicalization.yml  apply-datahub-readback-retry.yml  apply-document-readback-v2.yml  apply-document-readback-v3.yml  apply-document-readback.yml  apply-fastmcp-compat.yml  apply-lineage-normalization-pr.yml  apply-lineage-normalization-push.yml  apply-lineage-normalization.yml  apply-mcp-optional-compat.yml  apply-readme-live-evidence.yml  apply-submission-agent-skill.yml  capture-datahub-video-evidence.yml  capture-datahub-video.yml  capture-runtime-video-evidence.yml  ci.yml  compositional-ablation.yml  datahub-live.yml  diagnose-agent-registry-release.yml  diagnose-agent-registry-sdk.yml  enable-pages.yml  governance-dependency.yml  live-datahub-agent-registry.yml  materialize-replay-dist.yml  pages.yml  patch-replay-text-check.yml  pr-ci.yml  refresh-submission-replay-link.yml  research-external-datahub.yml  research-external-source.yml  research-real-agent-baseline.yml  research-trust-kernel.yml  ruff-diagnostic.yml  security-audit-temporary.yml  validation-p0-semantic-external.yml  verify-hosted-replay.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
config/: datahub-assets.json
demo/fixtures/: catalog.json
docs/: .migration-note  agent-integration.md  architecture.md  datahub-live-integration.md  deployment.md  judge-testing.md  threat-model.md
docs/evidence/: adversarial-mutations-summary.json  adversarial-mutations.md  benchmark-summary.json  benchmark.md  (+13 more)
examples/: README.md  public-order-counts.sql  regional-churn-original.sql  regional-churn-safe.sql  unsafe-individual-export.sql
research/: __init__.py
research_diagnostics/: verify_external_datahub.py
research_failures/: FAILURE-0002-external-datahub-mcp.md  FAILURE-0003-real-agent-blind-baseline.md
scripts/: capture_datahub_video.mjs  capture_datahub_video_evidence.mjs  capture_runtime_video_evidence.mjs  prepare_capture_authorization_runtime.py  run_datahub_video_capture_ci.sh  verify_hosted_replay.mjs
(+154 files in other folders)
