[project]
name = "toxicjoin"
version = "0.1.0"
description = "Compositional privacy firewall for AI data agents"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "sqlglot>=26,<27",
  "duckdb>=1.1,<2",
  "pyyaml>=6,<7",
  "httpx>=0.27,<1",
]

[project.scripts]
toxicjoin-api = "toxicjoin.cli:run_api"
toxicjoin-seed = "toxicjoin.demo.seed:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.9,<1",
  "mypy>=1.13,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
